Dark Mode Fix

--- a/src/components/UserTabs/commentContainer.css
+++ b/src/components/UserTabs/commentContainer.css
@@ -1,3 +1,28 @@
+:root{
+  --bs-body-bg: #f5f5f5;
+  --theme-background: #f5f5f5;
+  --hover-color: #d5d4d4c9;
+  --text-color: #333;
+  --comments: #e2e2e2;
+  --theme-secondary: #f5f5f5;
+}
+
+[data-theme="dark"]{
+  --bs-body-bg: #1a1a1b;
+  --theme-background: #2b2b2b;
+  --hover-color: #333;
+  --text-color: #f5f5f5;
+  --comments: #333; 
+  --theme-secondary: #2b2b2b;
+}
+
+[data-theme="light"]{
+  --bs-body-bg: #f5f5f5;
+  --theme-background: #f5f5f5;
+  --text-color: #333;
+}
+
+
 .comments-container{
     width: 730px;
     height: auto;
@@ -44,13 +69,13 @@
   
   .reach{
     position: relative;
-    background: #ebeaea;
+    background: var(--theme-secondary);
     border-radius: 20px;
     margin-right: 12px;
   }
   
   .reach:hover{
-    background: #e2e2e2;
+    background: var(--theme-secondary);
     border-radius: 20px;
     
   }
@@ -59,7 +84,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: #c0bebe;
+    color: var(--text-color);
     margin: 0px 8px;
   }
   
@@ -72,12 +97,12 @@
   }
   
   .upvote:hover{
-    background: #d3d3d3;
+    background: var(--hover-color);
     border-radius: 50%;
   }
   
   .downvote:hover{
-    background: #d3d3d3;
+    background: var(--hover-color);
     border-radius: 50%;
   }
   
@@ -135,7 +160,7 @@
     position: relative;
     height: 30px;
     display: flex;
-    background: #ebeaea;
+    background: var(--theme-secondary);
     border-radius: 20px;
     cursor: pointer;
     margin-right: 6px;
@@ -149,7 +174,7 @@
   }
   
   .share:hover{
-    background: #e2e2e2;
+    background: var(--hover-color);
     border-radius: 20px;
   }
   
@@ -174,7 +199,7 @@
   
   .share-menu{
     position: relative;
-    background: white;
+    background: var(--theme-background);
     margin: 10px;
     border-radius: 8%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -209,7 +234,7 @@
   }
   
   .share-menu-link:hover{
-    background: #f5f5f5;
+    background: var(--theme-background);
     border-radius: 8%;
     cursor: pointer;
   }
@@ -221,7 +246,7 @@
   }
   
   .options-button {
-    background-color: #fff;
+    background-color: var(--theme-secondary);
     color: black;
     border: none;
     padding: 8px 12px;
@@ -231,7 +256,7 @@
   }
   
   .options-button:hover {
-    background-color: #e2e2e2; /* Change to black */
+    background-color: var(--hover-color); /* Change to black */
     color: black; /* Change text color to white when hovered */
     border-radius: 50px; /* Reset border-radius */
   }
@@ -241,7 +266,6 @@
     position: absolute;
     top: calc(100% + 10px);
     right: 0%;
-    background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
     z-index: 1;
@@ -261,7 +285,7 @@
   }
   
   .options-list ul li:hover {
-    background-color: #f0f0f0;
+    background-color: var(--hover-color);
   }
 
 
